Add Object identifier to the User PUT-Request
