# src/main/java/com/example/gratidude_journal/user/UserUpdateDTO.java
@@ -3,8 +3,7 @@ package com.example.gratidude_journal.user;
 /*
     Part of the Presentation Layer for User-API
 */
-public record UserDTO(
-        String userName,
+public record UserUpdateDTO(
         String firstName,
         String lastName) {
 }
